Boceto de la pagina terminado

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,333 +7,219 @@
     font-family: 'Poppins', sans-serif;
 }
 
-section{
-    padding: 2rem 9%;
-}
-.heading{
-    text-align: center;
-    font-size: 2rem;
-    color: black;
-    padding: 1rem;
-    margin: 2rem 0;
-    background: white;
-}
-.heading span{
-    color:var(--black);
-}
-.btn{
-    display: inline-block;
-    margin-top: 1rem;
-    border-radius: 5rem;
-    background: #333;
-    color: #ffff;
-    padding:.9rem 3.5rem;
-    cursor: pointer;
-    font-size: 1.7rem;
-    margin-left: 20px;
-}
-.btn:hover{
-    background: black;
-}
-.home{
-    display: flex;
-    align-items: center;
-    min-height: 100vh;
-    background: url(/frontend/static/img/banner-2.png) no-repeat;
-    background-size: cover;
-    background-position:center;
-
-}
-.home .content{
-    max-width: 50rem;
-}
-.home .content h3{
-    font-size: 6rem;
-    color: black;
-}
-.home .content span{
-    font-size: 3.5rem;
-    color: var(--black);
-    padding: 1rem 0;
-    line-height: 1.5;   
-}
-.home .content p{
-    font-size: 1.5rem;
-    color:#5f5f5f;
-    padding: 1rem 0;
-    line-height: 1.5;
-}
-/*Productos*/
-.productos{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
-}
-.line{/*Selecciona elementos con la clase "line" */
-    background:white;                 /*Establece el color de fondo como un valor RGB*/
-    padding: 20px; 
-    margin-top: 2.5px;                    /*Agrega un relleno de 40 píxeles al elemento.*/
+.container-section {
+    width: 80%;
+    max-width: 1200px;
+    margin: 20px auto;
+    margin-top: 100px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
-#productos{/*Selecciona elemento con el ID "rooms" */
-
-    color: black;                             /*Establece el color del texto como blanco.*/
-    text-align: center;                         /*Centra el texto horizontalmente utilizando text-align.*/
-    font-size: 28px;                          /*Define el tamaño de fuente como 18px.*/   
-
-}
-#somos{
-    color: black;
-    text-align: center;
-    font-size: 28px;
-}
-.container-card {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
+/* Sección de Bienvenida con Banner */
+.welcome-banner {
+    position: relative;
+    margin-bottom: 40px;
 }
 
-.card-somos {
-    display: flex; /* Añadido para alinear la imagen y el contenido en una fila */
-    width: 1000px;
-    background-color: white;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    margin: 20px;
-}
-
-.card-somos img {
-    width: 50%; /* Ajustar el ancho según necesidad */
-    height: auto;
-    object-fit: cover; /* Para asegurarse de que la imagen se ajusta bien al contenedor */
-}
-
-.somos-content {
-    padding: 16px;
-    flex: 1; /* Para que el contenido tome el espacio restante */
-}
-
-.somos-content h3 {
-    font-size: 28px;
-    margin-bottom: 8px;
-}
-
-.somos-content p {
-    color: #666;
-    font-size: 15px;
-    line-height: 1.3;
-}
-
-.somos-content .btn_1 {
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: #333;
-    text-decoration: none;
-    border-radius: 4px;
-    margin-top: 16px;
-    color: #fff;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.card-container{/* Contenedor para las tarjetas */
-
-    display: flex;                            /* Muestra los elementos en fila */
-    justify-content: center;                  /* Centra horizontalmente los elementos */
-    flex-wrap: wrap;                          /* Permite que los elementos se envuelvan en varias líneas */
-    margin-top: 50px;                         /* Margen superior de 50 píxeles */
-	
-}
-
-.card{/* Estilo para cada tarjeta */
-
-    width: 350px;                            /* Ancho de la tarjeta */
-    background-color: white;                 /* Fondo blanco */
-    border-radius: 8px;                      /* Bordes redondeados */
-    overflow: hidden;                        /* Oculta el contenido que se desborda */
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2); /* Sombra ligera */
-    margin: 20px;                            /* Margen exterior de 20 píxeles */
-	
-}
-
-.card img{/* Estilo para las imágenes dentro de las tarjetas */
-
-    width: 100%;                            /* La imagen ocupa todo el ancho de la tarjeta */
-    height: auto;                           /* Altura automática según la proporción original */
-	
-}
-
-.card-content{/* Estilo para el contenido de la tarjeta */
-
-    padding: 16px;                          /* Relleno interior de 16 píxeles */
-	
-}
-
-.card-content h3{/* Estilo para los encabezados dentro del contenido */
-
-    font-size: 28px;                        /* Tamaño de fuente para los encabezados */
-    margin-bottom: 8px;                     /* Margen inferior de 8 píxeles */
-	
-}
-
-.card-content p{/* Estilo para los párrafos dentro del contenido */
-
-    color: #666;                            /* Color de texto gris oscuro */
-    font-size: 15px;                        /* Tamaño de fuente para los párrafos */
-    line-height: 1.3;                       /* Espaciado entre líneas */
-	
-}
-
-.card-content .btn_2{/* Estilo para los botones dentro del contenido */
-
-    display: inline-block;                  /* Se muestra como un elemento en línea */
-    padding: 8px 16px;                      /* Relleno interior del botón */
-    background-color: #333;                 /* Fondo del botón en color gris oscuro */
-    text-decoration: none;                  /* Sin subrayado en el texto del botón */
-    border-radius: 4px;                     /* Bordes redondeados del botón */
-    margin-top: 16px;                       /* Margen superior de 16 píxeles */
-    color: #fff;                            /* Color de texto blanco */
-}
-.card-container .card .card-content .heart{
-    color: black;
-    margin-left: 100px;
-}
-.card-container .card .card-content .cart-shopping{
-    color: black;
-    margin-left: 10px;
-}
-.bton{
-    padding: 8px 16px;
-    background-color: #333;
-    text-decoration: none;
-    border-radius: 4px;
-    margin-top: 2px;
-    margin-bottom: 5px;
-    color: white;
-}
-/*Galeria*/
-
-.line2{
-    background:white;                 /*Establece el color de fondo como un valor RGB*/
-    padding: 20px; 
-    margin-top: 15px;  
-}
-#galery{
-    color: black;                             /*Establece el color del texto como blanco.*/
-    text-align: center;                         /*Centra el texto horizontalmente utilizando text-align.*/
-    font-size: 28px;  
-}
-.gallery-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 10px;
-    gap: 10px;
-}
-.gallery-item {
-    width: 300px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.2s;
-}
-.gallery-item:hover {
-    transform: scale(1.05);
-}
-.gallery-item img {
+.welcome-banner img {
     width: 100%;
     height: auto;
-    display: block;
+    border-radius: 10px;
 }
-.footer {
-    background-color: #ffffff;
-    color: #333;
-    padding: 20px 0;
-    border-top: 1px solid #eaeaea;
+
+.banner-text {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    color: black;
+    text-align: center;
+    /*background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    padding: 40px;
+    border-radius: 10px;
+    width: 80%; /* Ancho del contenedor de texto */
+    max-width: 600px; /* Ancho máximo del contenedor de texto */
 }
-.footer-container {
+
+.banner-text h1, .banner-text p {
+    margin: 0;
+}
+
+.banner-text p {
+    margin-top: 10px; /* Espacio entre el título y el párrafo */
+}
+.banner-text h1{
+    font-size: 20px;
+}
+
+
+.latest-models {
+    margin-top: 40px;
+}
+
+.latest-models h2 {
+    font-size: 1.8em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.product {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    padding: 20px;
+    text-align: center;
+    width: 200px;
+}
+
+.product img {
+    border-radius: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    height: auto;
+}
+
+.product-info h3 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.product-info p {
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+.product-info h4 {
+    font-size: 1.2em;
+    margin-bottom: 20px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.heart-button {
+    background-color: #dc3545;
+}
+
+.heart-button:hover {
+    background-color: #c82333;
+}
+
+.cart-button {
+    background-color: #28a745;
+}
+
+.cart-button:hover {
+    background-color: #218838;
+}
+
+button i {
+    margin-right: 5px;
+}
+
+.gallery {
+    margin-top: 40px;
+}
+
+.gallery h2 {
+    font-size: 1.8em;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.gallery-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.gallery-images img {
+    margin: 10px;
+    border-radius: 10px;
+    max-width: 100%;
+    height: auto;
+    width: calc(25% - 20px); /* Ajuste de ancho para que las imágenes sean responsivas */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.about-us {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.about-us h2 {
+    font-size: 1.8em;
+    margin-bottom: 20px;
+}
+
+.about-content {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    max-width: 600px;
 }
-.footer-links {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
+
+.about-content img {
+    width: 150px;
+    height: auto;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.about-info {
+    text-align: center;
+}
+
+.about-info p {
+    font-size: 1.1em;
     margin-bottom: 20px;
 }
-.footer-links a {
-    color: #333;
-    text-decoration: none;
-    transition: color 0.3s;
+
+.read-more-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    border-radius: 5px;
+    cursor: pointer;
 }
-.footer-links a:hover {
-    color: #007BFF;
-}
-.footer-socials {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-bottom: 20px;
-}
-.footer-socials a {
-    color: #333;
-    text-decoration: none;
-    font-size: 1.5em;
-    transition: color 0.3s;
-}
-.footer-socials a:hover {
-    color: #007BFF;
-}
-.footer-contact {
-    margin-bottom: 20px;
-}
-.footer-contact p {
-    margin: 5px 0;
-}
-.footer-contact p:nth-child(1) {
-    margin-top: 0;
-}
-.footer-contact p:nth-child(3) {
-    margin-bottom: 0;
-}
-.footer-contact p {
-    margin: 5px 0;
-}
-.footer-copyright {
-    font-size: 0.875em;
-    color: #777;
-}
-@media (max-width: 768px) {
-    .footer-links {
-        flex-direction: column;
-        align-items: center;
-    }
-    .footer-socials {
-        flex-direction: column;
-        align-items: center;
-    }
+
+.read-more-button:hover {
+    background-color: #0056b3;
 }
 
 
@@ -357,44 +243,3 @@ section{
 
 
 
-
-
-
-
-
-
-
-@media (max-width: 768px) {
-    .gallery-item {
-        width: 45%;
-    }
-}
-@media (max-width: 480px) {
-    .gallery-item {
-        width: 100%;
-    }
-}
-@media(max-width:991px){
-    section{
-        padding: 2rem;
-    }
-    .home{
-        background-position: left;
-    }
-    .home .content h3{
-        font-size: 5rem;
-    }
-    .home .content span{
-        font-size: 2.5rem;
-    }
-
-}
-
-@media(max-width:450px){
-    html{
-        font-size: 50%;
-    }
-    .heading{
-        font-size: 3rem;
-    }
-}
